# CopulaPairTrading

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
copulapairtrading/: copula.py  strategy.py  utils.py
data/: nse_tickers.csv  pairs.json  price_data.csv
notebooks/: analysis.ipynb  copula2.ipynb  experiment.ipynb  pairs_trading.ipynb
