[tool.poetry]
name = "copulapairtrading"
version = "0.1.0"
description = ""
authors = ["Samay Panwar <samaybhuvi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
pre-commit = "^3.2.2"
pandas = "^2.0.0"
jupyter = "^1.0.0"
scipy = "^1.10.1"
seaborn = "^0.12.2"
sympy = "^1.11.1"
numpy = "^1.24.2"
yfinance = "^0.2.18"
arch = "^5.4.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
